--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.6.0
 attrs==22.2.0
+Brotli==1.0.9
+dj-database-url==1.2.0
 Django==4.1.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-extensions==0.7.1
 drf-spectacular==0.26.1
+drf-spectacular-sidecar==2023.3.1
+gunicorn==20.1.0
 inflection==0.5.1
 jsonschema==4.17.3
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 pyrsistent==0.19.3
 pytz==2022.7.1
@@ -14,3 +19,4 @@ PyYAML==6.0
 sqlparse==0.4.3
 tzdata==2022.7
 uritemplate==4.1.1
+whitenoise==6.4.0
