--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,6 +3,7 @@ attrs==22.2.0
 Brotli==1.0.9
 dj-database-url==1.2.0
 Django==4.1.7
+django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-extensions==0.7.1
