--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.6.0
 attrs==22.2.0
 Brotli==1.0.9
+crispy-bootstrap5==0.7
 dj-database-url==1.2.0
 Django==4.1.7
+django-crispy-forms==2.0
 django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
